<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".learningitemseteditor.LearningItemSetEditorActivity"
    tools:showIn="@layout/activity_learningitemseteditor">

    <LinearLayout
        android:id="@+id/learning_item_set_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/input_fields"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/learning_item_set_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />

        <ImageView
            android:id="@+id/learning_item_set_name_change_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/change_icon"
            android:maxHeight="20dp"
            android:scaleType="centerCrop" />

        <EditText
            android:id="@+id/learning_item_set_name_textbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="Learning item set name"
            android:hint="@string/learning_item_set_name_textbox_hint"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_fields"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/edit_learning_item_list_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/learning_item_set_name">

        <EditText
            android:id="@+id/left_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="Left-side value"
            android:hint="@string/left_input_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/right_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="Right-side value"
            android:hint="@string/right_input_hint"
            android:inputType="text" />

    </LinearLayout>

    <Button
        android:id="@+id/edit_learning_item_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/learning_item_list"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_fields" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/learning_item_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_learning_item_list_button" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/menu_navbar" />

</android.support.constraint.ConstraintLayout>