<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".main.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/input_fields"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/add_learning_item_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/left_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="Left-side value"
            android:hint="@string/left_input_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/right_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="Right-side value"
            android:hint="@string/right_input_hint"
            android:inputType="text" />

    </LinearLayout>

    <Button
        android:id="@+id/add_learning_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_learning_item_button_text"
        app:layout_constraintBottom_toTopOf="@+id/learningitem_list"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_fields" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/learningitem_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_learning_item_button" />

    <Button
        android:id="@+id/update_learning_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_learning_item_button_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learningitem_list" />

</android.support.constraint.ConstraintLayout>