<resources>
    <string name="app_name">Learnification</string>
    <string name="action_settings">Settings</string>
    <string name="learnification_channel_name">learnification</string>
    <string name="learnification_channel_description">notification_channel_for_learnification</string>
    <string name="right_input_hint">Right-side value</string>
    <string name="left_input_hint">Left-side value</string>
    <string name="learnification_delay_input_text_prompt">How many minutes between each notification?</string>
    <string name="add_learning_item_button_text">Add Learning Item</string>
    <string name="save_settings">Save</string>
    <string name="left_to_right">Left</string>
    <string name="right_to_left">Right</string>
    <string name="mixed_left_and_right">Mixed</string>
    <string name="learnification_prompt_strategy_input_text_prompt">Which side of the learning items do you want to be prompted with?</string>
    <string name="learning_item_editable_text_entry_hint">editable text entry for a learning item</string>
    <string name="update_learning_item_button_text">Update Learning Item</string>
    <string name="learning_item_set_name_textbox_hint">Learning item set name</string>
    <string name="change_icon">change_icon</string>
    <string name="options_menu_refresh">Refresh</string>
    <string name="options_menu_logs">Show Logs</string>
    <string name="learnification_response_channel_name">learnification-response</string>
    <string name="learnification_response_channel_description">notification_channel_for_learnification_responses</string>
    <string name="daily_report_channel_name">daily-report</string>
    <string name="daily_report_channel_description">notification_channel_for_daily_reports</string>
    <string name="options_menu_jobs">Show Notification Jobs</string>
    <string name="learning_items_navbar_title">Learning Items</string>
    <string name="settings_navbar_title">Settings</string>
</resources>
