...
                android:text="@string/mixed_left_and_right" />

        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/save_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/save_settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
...
